# bakery

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.arm64  README.md  pyproject.toml
.github/workflows/: docker.yml
examples/: basic.yaml  borealis_1b.yaml  continual_memory.yaml  multi_turn_prefix.yaml  pattern_targets.yaml  per_row_prefix.yaml  performance.yaml  sft_dataset.yaml
src/bakery/: __init__.py  cli.py  config.py  data.py  deps.py  evaluate.py  kl.py  masking.py  trainer.py
tests/: conftest.py  test_benchmark.py  test_build_system_prompt.py  test_cli.py  test_cli_helpers.py  test_config.py  test_context_baking.py  test_context_config.py  test_data.py  test_data_conversational.py  test_data_extra.py  test_deps.py  test_evaluate.py  test_evaluate_extra.py  test_format_trajectory.py  test_kl.py  test_kl_extra.py  test_load_corpus.py  test_load_eval_data.py  test_masking.py  test_trainer.py  test_trainer_internals.py  test_training_step.py  test_unsloth.py  test_utils.py
