[project]
name = "bakery"
version = "0.1.0"
description = "Where LLMs go to get baked"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "transformers>=4.45",
    "datasets>=3.0",
    "peft>=0.13",
    "accelerate>=1.0",
]

[project.optional-dependencies]
qlora = ["bitsandbytes>=0.44"]
eval = ["rouge-score>=0.1"]

[project.scripts]
bakery = "bakery.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "benchmark: performance benchmark tests (select with '-m benchmark')",
]
